<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:text="@string/time_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

        <EditText
            android:id="@+id/time_field"
            android:layout_width="295dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_time_placeholder"
            android:inputType="time" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="93dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/date_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

        <EditText
            android:id="@+id/date_field"
            android:layout_width="301dp"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:hint="@string/enter_date_plcaeholder"
            android:inputType="date" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="79dp"
            android:text="@string/description_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

        <EditText
            android:id="@+id/message_field"
            android:layout_width="235dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_message_placeholder"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="82dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/snoozeable_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

        <ToggleButton
            android:id="@+id/snoozeable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOff="@string/not_snoozeable"
            android:textOn="@string/snoozeable" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="88dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/snooze_limit_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

        <EditText
            android:id="@+id/limit_field"
            android:layout_width="184dp"
            android:layout_height="wrap_content"
            android:hint="@string/set_snooze_limit_plcaeholder"
            android:inputType="number" />

    </LinearLayout>

    <Button
        android:id="@+id/add_reminder"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="add"
        android:text="@string/add_reminder_button" />

</LinearLayout>