...
            android:layout_marginEnd="118dp"
            android:maxLines="1"
            android:textSize="18sp"
            tools:text="Time" />

        <Button
            android:id="@+id/delete_button"
            android:layout_width="78dp"
            android:layout_height="23dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:background="#d60000"
            android:text="@string/delete" />
...
